feat: show ongoing festivals preview on home page